<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:colorBackground"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <LinearLayout
        android:id="@+id/search_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_sort" />

        <Spinner
            android:id="@+id/spinner_sort_order"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp" />

        <Spinner
            android:id="@+id/spinner_sort_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_color_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_filter_by_color" />

        <yandex.com.mds.hw.colorpicker.colorview.CircleColorView
            android:id="@+id/filter_color"
            android:layout_width="@dimen/circle_color_height"
            android:layout_height="@dimen/circle_color_width"
            android:layout_margin="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/filter_date_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/query_filter_by_date" />

        <Spinner
            android:id="@+id/spinner_filter_date_type"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_date" />

        <Spinner
            android:id="@+id/spinner_filter_date_field"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_filter_date_type" />

        <TextView
            android:id="@+id/filter_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/spinner_filter_date_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="visible" />

        <TextView
            android:id="@+id/filter_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/spinner_filter_date_field"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <Spinner
            android:id="@+id/spinner_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_apply"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>
</LinearLayout>