<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="yandex.com.mds.hw.color_edit.ColorEditActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/color"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_toStartOf="@+id/color"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:maxLength="50" />

    <yandex.com.mds.hw.colorpicker.colorview.EditableColorView
        android:id="@+id/color"
        android:layout_width="@dimen/editable_color_width"
        android:layout_height="@dimen/editable_color_height"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/editable_color_margin"
        android:fitsSystemWindows="true" />

    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/shadow_size"
        android:layout_alignEnd="@+id/color"
        android:layout_alignStart="@+id/color"
        android:layout_below="@id/color"
        android:background="@drawable/shadow" />

    <Button
        android:id="@+id/save_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/shadow"
        android:layout_below="@+id/shadow"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/save_button_marginTop"
        android:text="@string/save" />

</RelativeLayout>
